// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoardFactory should create board from fen 1`] = `
"
  a b c d e f g h
8 ♖ ♘ ♗ ♕ ♔ ♗ ♘ ♖ 
7 ♙ ♙ ♙ ♙ ♙ ♙ ♙ ♙ 
6 □ ■ □ ■ □ ■ □ ■ 
5 ■ □ ■ □ ■ □ ■ □ 
4 □ ■ □ ■ □ ■ □ ■ 
3 ■ □ ■ □ ■ □ ■ □ 
2 ♟ ♟ ♟ ♟ ♟ ♟ ♟ ♟ 
1 ♜ ♞ ♝ ♛ ♚ ♝ ♞ ♜ 
"
`;

exports[`BoardFactory should create empty board 1`] = `
"
  a b c d e f g h
8 □ ■ □ ■ □ ■ □ ■ 
7 ■ □ ■ □ ■ □ ■ □ 
6 □ ■ □ ■ □ ■ □ ■ 
5 ■ □ ■ □ ■ □ ■ □ 
4 □ ■ □ ■ □ ■ □ ■ 
3 ■ □ ■ □ ■ □ ■ □ 
2 □ ■ □ ■ □ ■ □ ■ 
1 ■ □ ■ □ ■ □ ■ □ 
"
`;
